...
                                            </stackView>
                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="AHD-qE-mTJ">
                                                <rect key="frame" x="172.5" y="0.0" width="172.5" height="150"/>
                                                <subviews>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LqB-lx-tU1" userLabel="Convert ">
                                                        <rect key="frame" x="0.0" y="0.0" width="172.5" height="30"/>
                                                        <state key="normal" title="Convert"/>
                                                        <connections>
                                                            <action selector="convertCurrency:" destination="BYZ-38-t0r" eventType="touchUpInside" id="LvA-Sf-8cZ"/>
                                                        </connections>
                                                    </button>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D6l-qU-QFn">
                                                        <rect key="frame" x="0.0" y="30" width="172.5" height="30"/>
                                                        <state key="normal" title="Clear"/>
                                                        <connections>
                                                            <action selector="clearTextField:" destination="BYZ-38-t0r" eventType="touchUpInside" id="DHi-ev-rvC"/>
                                                        </connections>
                                                    </button>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TGK-Ly-kqT">
                                                        <rect key="frame" x="0.0" y="60" width="172.5" height="30"/>
...
